@@ -1,5 +1,8 @@
 2008-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/Collector/SNMP.pm:
+	New parameter: snmp-ignore-mib-errors
+
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
 	New parameter generated by IF-MIB: interface-comment
 
